[package]
name = "nrfcloudlib"
description = "Library to interact with nrf cloud"
version = "0.1.1"
edition = "2024"
license = "MIT"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.45.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
